fix z-index for captions

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,8 @@ header {
   margin-bottom: 4.5rem;
 }
 
-.btn-full {
+.btn-full:link,
+.btn-full:visited {
   font-size: 1.6rem;
   text-decoration: none;
   color: #fff;
@@ -142,8 +143,7 @@ header {
 
 .btn-full:hover,
 .btn-full:active {
-  background-color: red;
-  /* background-color: #c2531b; */
+  background-color: #c2531b;
 }
 
 .carousel {
@@ -163,10 +163,10 @@ header {
 }
 
 .carousel-caption {
-  position: absolute;
   top: 40%;
   left: 15%;
   text-align: left;
+  z-index: 2;
 }
 
 .from-top {
